@@ -1,0 +1,6 @@
+package coinffeine.protocol.gateway.p2p
+
+private object PingProtocol {
+  case object Ping
+  case object Pong
+}
